# pepperChatBotIaLocal

./: .gitattributes  .gitignore  Dockerfile.txt  README.md  config.json  dialogue.prompt  gemma2_pipeline.py  module_dialogue.py  module_speechrecognition.py  msg.txt  nao.prompt  pepper_prompt.txt  pepper_tts_handler.py  recognize_local.py  start_pipeline.bat  stt_result.txt
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
oaichat/: oaiclient.py  oaiserver.py  openai.prompt  openaichat.py
pepperspeechrecognition/: speechrecognition.py
pynaoqi-python2.7-2.5.7.1-win32-vs2013/lib/qi/: path.pycZone.Identifier
python-Levenshtein-wheels-0.13.1/: MANIFEST.in  README.rst  setup.cfg  setup.py
python-Levenshtein-wheels-0.13.1/python_Levenshtein_wheels.egg-info/: PKG-INFO  SOURCES.txt
