[metadata]
name = python-Levenshtein-wheels
version = attr: Levenshtein.__version__
description = Python extension for computing string edit distances and similarities.
long_description = file: README.rst, CHANGELOG.rst
classifiers = 
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Programming Language :: C
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 3
	Programming Language :: Python :: Implementation :: CPython
keywords = string Levenshtein comparison edit-distance
author = Antti Haapala
author_email = antti@haapala.name
maintainer = Tobotimus
maintainer_email = me@tobyharradine.id.au
url = http://github.com/Tobotimus/python-Levenshtein
license = GPL

[options]
packages = Levenshtein

[egg_info]
tag_build = 
tag_date = 0

